# Graphic-Forge-Ovorldule

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
examples/: main.cpp
include/OvorlduleGraphics/: Vectors.h  Window.h  WindowParameters.h
src/common/: Vectors.cpp  Window.cpp  WindowParameters.cpp
src/include/: GraphicsEngine.hpp
src/samples/: CMakeLists.txt  main.cpp
src/src/: GraphicsEngine.cpp
